# GestureGuard

./: .gitignore  GestureGuard_Media_Presentation.key  Gesture_Guard.docx  Gesture_Guard.pages  README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: gg_run.py
docs/: index.md
gestureguard_core/: __init__.py  camera.py  config.py  features.py  gestures.py  hands.py  utils.py
gestureguard_core/dispatcher/: __init__.py  base.py  linux.py  macos.py  windows.py
gestureguard_ui/: app.py
gestureguard_ui/widgets/: video_widget.py
scripts/: dev_install.sh
tests/: test_features.py
