[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gestureguard"
version = "0.1.0"
description = "On-device hand-gesture media controller (student MVP)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "GestureGuard Team"}]

dependencies = [
  "opencv-python>=4.9",
  "mediapipe>=0.10",
  "numpy>=1.26",
  "PySide6>=6.6",
  "PyYAML>=6.0",
  "pydantic>=2",
  "rich>=13",
]

[project.optional-dependencies]
win = ["pycaw>=20230407", "keyboard>=0.13"]
linux = ["pulsectl>=24.5.0", "dbus-python>=1.3.2"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "black>=24", "mypy>=1.11", "mkdocs>=1.6", "mkdocs-material>=9"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.setuptools]
packages = ["gestureguard_core"]
